[tool.poetry]
name = "spotifychartsvis"
version = "0.1.0"
description = ""
authors = ["Franzi <92818644+franziskavonalbedyll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.22.0"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"
bokeh = "^3.5.0"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

